--- a/_source/scss/components/_navigation.scss
+++ b/_source/scss/components/_navigation.scss
@@ -115,7 +115,7 @@ nav > ul,
   margin-top: 8px;
   margin-right: 20px;
   font-size: em(42px);
-  letter-spacing: em(2px);
+  letter-spacing: 2px;
   text-align: right;
   color: $orange;
 
